[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/font-dogicapixelbold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Theme/theme-hearts-on.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Theme/theme-hearts-off.png" type="Texture" id=4]
[ext_resource path="res://Components/Interface/Interface.gd" type="Script" id=5]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="TopLeft"]
margin_right = 64.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 2 )
text = "Power"
uppercase = true

[node name="PowerBar" type="ProgressBar" parent="TopLeft"]
margin_top = 10.0
margin_right = 64.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 24, 34 )
max_value = 10.0
value = 1.0
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="HSeparator" type="HSeparator" parent="TopLeft"]
margin_top = 22.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 8 )

[node name="LifeLabel" type="Label" parent="TopLeft"]
margin_top = 34.0
margin_right = 64.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Life"
uppercase = true

[node name="LifeRect" type="Control" parent="TopLeft"]
margin_top = 44.0
margin_right = 64.0
margin_bottom = 44.0

[node name="LifeRectOff" type="TextureRect" parent="TopLeft/LifeRect"]
margin_right = 64.0
margin_bottom = 11.0
rect_min_size = Vector2( 13, 0 )
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeRectOn" type="TextureRect" parent="TopLeft/LifeRect"]
margin_right = 13.0
margin_bottom = 11.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLabel" type="Label" parent="TopRight"]
margin_right = 64.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 2 )
text = "NEXT"
uppercase = true

[node name="NextBar" type="ProgressBar" parent="TopRight"]
margin_top = 10.0
margin_right = 64.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 24, 34 )
value = 50.0
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="HSeparator" type="HSeparator" parent="TopRight"]
margin_top = 22.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 8 )

[node name="DepthLabel" type="Label" parent="TopRight"]
margin_top = 34.0
margin_right = 64.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Depth"
uppercase = true

[node name="DepthCount" type="Label" parent="TopRight"]
margin_top = 44.0
margin_right = 64.0
margin_bottom = 50.0
text = "314 m"

[node name="BottomRight" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -28.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="BottomRight"]
margin_right = 63.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 2 )
text = "pts"

[node name="PointsCount" type="Label" parent="BottomRight"]
margin_top = 10.0
margin_right = 63.0
margin_bottom = 16.0
text = "19216801"

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOver"]
self_modulate = Color( 1, 1, 1, 0.741176 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_right = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="VBoxContainer" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -20.0
margin_right = 45.5
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GameOver/Center"]
margin_top = 8.0
margin_right = 91.0
margin_bottom = 14.0
text = "game over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/Center"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 32.0
alignment = 1

[node name="RestartButton" type="Button" parent="GameOver/Center/HBoxContainer"]
margin_right = 54.0
margin_bottom = 14.0
text = "Restart"

[node name="QuitButton" type="Button" parent="GameOver/Center/HBoxContainer"]
margin_left = 58.0
margin_right = 91.0
margin_bottom = 14.0
text = "Quit"

[connection signal="pressed" from="GameOver/Center/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOver/Center/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
